--- a/composer.json
+++ b/composer.json
@@ -94,6 +94,7 @@
         }
     },
     "require-dev": {
+        "fakerphp/faker": "^1.23",
         "phpunit/phpunit": "^9.5",
         "symfony/browser-kit": "7.0.*",
         "symfony/css-selector": "7.0.*",
